# rust-login-demo

./: .env.example  Cargo.toml  README.md
doc/: README.md  auth_requirements.md  authentication_token_and_risk_control_rules.md  jwt_auth_security_requirement.md
migrations/: 0001_auth_init.sql
src/: app_state.rs  auth.rs  main.rs  web.rs
src/infra/: db.rs
src/rest/: auth.rs  echo.rs  health.rs  mod.rs  request_context.rs
static/: app.js  index.html  style.css
