[package]
name = "login-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.6", features = ["fs"] }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
